--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint --fix",
-    "test:components": "cypress open-ct"
+    "test:components": "cypress open-ct",
+    "cypress:open": "cypress open --config baseUrl=http://localhost:3000",
+    "test:e2e": "npm-run-all --parallel dev cypress:open"
   },
   "dependencies": {
     "@smart-contact/smartify": "^0.20.0",
@@ -18,7 +20,8 @@
     "@vuelidate/validators": "^2.0.0-alpha.25",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.14",
-    "vue-recaptcha-v3": "^1.9.0"
+    "vue-recaptcha-v3": "^1.9.0",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@cypress/vite-dev-server": "^2.2.1",
@@ -36,6 +39,7 @@
     "vite": "^2.6.4",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-vue2": "^1.9.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "yarn-run-all": "^3.1.1"
   }
 }
