fix: use VITE prefix for env variables

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #Recaptcha public key
-VUE_APP_RECAPTCHA_PUBLIC_KEY=6Le30LoZAAAAAOaHzuTMKScIoZTg5Jg8qa-vVyuN
+VITE_RECAPTCHA_PUBLIC_KEY=6Le30LoZAAAAAOaHzuTMKScIoZTg5Jg8qa-vVyuN
 
 #GOOGLE MAPS
-VUE_APP_GOOGLE_MAPS_KEY=
+VITE_GOOGLE_MAPS_KEY=
