--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@vuelidate/validators": "^2.0.0-alpha.25",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.14",
-    "vuelidate": "^0.7.6"
+    "vuelidate": "^0.7.6",
+    "@vueuse/core": "^6.7.3"
   },
   "devDependencies": {
     "@cypress/vite-dev-server": "^2.2.1",
