--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "test:e2e": "npm-run-all --parallel dev cypress:open"
   },
   "dependencies": {
-    "@smart-contact/smartify": "^0.23.4",
-    "@smart-contact/smartland": "^3.1.0",
+    "@smart-contact/smartify": "^1.0.0-beta.0",
+    "@smart-contact/smartland": "^3.2.0-beta.0",
     "@smart-contact/smartland-plugin-scheduler": "^1.0.7",
     "@smart-contact/smartland-plugin-smart-bridge": "^1.0.0",
-    "@vue/composition-api": "^1.4.0",
     "@vuelidate/core": "^2.0.0-alpha.32",
     "@vuelidate/validators": "^2.0.0-alpha.25",
-    "bootstrap-vue": "^2.21.2",
-    "vue": "^2.6.14",
+    "bootstrap-vue": "latest",
+    "vue": "^2.7.x",
     "vue-recaptcha-v3": "^1.9.0",
     "vuelidate": "^0.7.6",
     "@vueuse/core": "^6.7.3"
@@ -39,7 +38,7 @@
     "sass": "^1.43.4",
     "vite": "^2.6.4",
     "vite-plugin-eslint": "^1.3.0",
-    "vite-plugin-vue2": "^1.9.0",
+    "@vitejs/plugin-vue2": "latest",
     "vue-template-compiler": "^2.6.14",
     "yarn-run-all": "^3.1.1"
   }
