--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "test:e2e": "npm-run-all --parallel dev cypress:open"
   },
   "dependencies": {
-    "@smart-contact/smartify": "^0.23.4",
-    "@smart-contact/smartland": "^3.1.0",
+    "@smart-contact/smartify": "^1.0.0",
+    "@smart-contact/smartland": "^3.2.0",
     "@smart-contact/smartland-plugin-scheduler": "^1.0.7",
     "@smart-contact/smartland-plugin-smart-bridge": "^1.0.0",
-    "@vue/composition-api": "^1.4.0",
     "@vuelidate/core": "^2.0.0-alpha.32",
     "@vuelidate/validators": "^2.0.0-alpha.25",
-    "bootstrap-vue": "^2.21.2",
-    "vue": "^2.6.14",
+    "bootstrap-vue": "latest",
+    "vue": "^2.7.x",
     "vue-recaptcha-v3": "^1.9.0",
     "vuelidate": "^0.7.6",
     "@vueuse/core": "^6.7.3"
@@ -29,18 +28,20 @@
     "@cypress/vue": "^2.2.3",
     "@smart-contact/vite-plugin-landing-page-params": "^1.0.0",
     "cypress": "^9.1.0",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.1.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.4.0",
     "prettier": "^2.4.1",
     "rollup-plugin-zip": "^1.0.3",
     "sass": "^1.43.4",
-    "vite": "^2.6.4",
-    "vite-plugin-eslint": "^1.3.0",
-    "vite-plugin-vue2": "^1.9.0",
+    "vite": "^3.0.9",
+    "vite-plugin-eslint": "^1.8.1",
+    
+    "@vitejs/plugin-vue2": "latest",
     "vue-template-compiler": "^2.6.14",
-    "yarn-run-all": "^3.1.1"
+    "yarn-run-all": "^3.1.1",
+    "vue-eslint-parser": "^9.0.3"
   }
 }
