--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,19 @@
     "statusBar.foreground": "#e7e7e7",
     "statusBarItem.hoverBackground": "#a45f58",
     "statusBarItem.remoteBackground": "#834c46",
-    "statusBarItem.remoteForeground": "#e7e7e7"
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "activityBar.activeBackground": "#a45f58",
+    "activityBar.background": "#a45f58",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#83bc88",
+    "activityBarBadge.foreground": "#15202b",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#a45f58",
+    "titleBar.activeBackground": "#834c46",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#834c4699",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
   "peacock.color": "#834c46"
 }
